changed names of a few divs in footer to be consistent with bem fixed sizing issue with gallery on tablet view

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -264,22 +264,23 @@
         }
 
         &__item {
-            max-width: 32.2%;
-            }
+            max-width: 31%;
         }
 
         &__img {
             padding: 0;
         }
-
+    }
     // GALLERY DESKTOP STYLING
 
-        @include respond(desktop) {
-            padding: 0 4.5rem;
+    @include respond(desktop) {
+        padding: 0 4.5rem;
 
-
+        &__item {
+            max-width: 31.9%;
         }
     }
+}    
 
 
 
@@ -349,18 +350,18 @@
         display: flex;
         flex-flow: row wrap;
 
-        &__test1 {
+        &__top-container {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
             width: 100%;
-        }
 
-        &__test2 {
-            display: flex;
-            flex-direction: row;
-            align-items: baseline;
+            &__left {
+                display: flex;
+                flex-direction: row;
+                align-items: baseline;
+            }
         }
 
         &__heading {
@@ -382,7 +383,7 @@
             display: block;
         }
 
-        &__container {
+        &__mid-container {
             display: flex;
             flex-direction: row;
             column-gap: 3rem; 
